[tool.poetry]
name = "social media downloader"
version = "0.1.0"
description = ""
authors = ["nickkitovsky <1825545+nickkitovsky@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
pydantic-settings = "^2.1.0"
tiktok-downloader = {git = "https://github.com/krypton-byte/tiktok-downloader"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
