[project]
name = "socialmedia-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "pydantic-settings>=2.9.1",
    "tiktok-downloader>=0.3.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
